--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -165,7 +165,7 @@
 <section class="catagery" style="background-color: #fef0ff;padding: 70px 0px 1px 0px;">
 <div class="container mb-5">
   <div class="row d-flex align-items-start justify-content-center">
-    <div class="col-lg-6">
+    <div class="col-lg-6 order-2 order-lg-1">
       <div class="card_items">
         <div class="cardes">
           <img src="assets/images/1.png" class="img-fluid" />
@@ -199,7 +199,7 @@
       </div>
     </div>
 
-    <div class="col-lg-6">
+    <div class="col-lg-6 order-1 order-lg-2">
       <div class="upcom">
         <p>Greatest Digital</p>
       </div>
@@ -668,8 +668,8 @@
             <div class="col-lg-6">
                 <p class="footer">Copyright © 2024<span> AURA Elite Events</span>. All Rights Reserved.</p>
             </div>
-            <div class="col-lg-6 d-flex align-items-center justify-content-end">
-                <p>Designed & Developed by <span style="color: #7E0086;cursor: pointer;">Salkom Design Studio</span></p>
+            <div class="col-lg-6 designes d-flex align-items-center justify-content-end">
+                <p class="">Designed & Developed by <span style="color: #7E0086;cursor: pointer;">Salkom Design Studio</span></p>
             </div>
         </div>
     </div>
