--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,45 +1,90 @@
-<!-- <section class="top_header">
-    <div class="container">
-        <div class="row">
-            <div class="col-lg-6">
-                <div class="location">
-<i class="ri-crosshair-2-line"></i>
-<p> Akshya Nagar 1st Block 1st Cross, Rammurthy nagar, Bangalore-560016</p>
-</div>
-            </div>
-<div class="col-lg-6">
-    <div class="social">
-    <i class="ri-facebook-circle-line"></i>
-    <i class="ri-instagram-line"></i>
-    <i class="ri-whatsapp-line"></i>
-    <i class="ri-twitter-x-line"></i> 
-    </div>
-</div>
-        </div>
-    </div>
-</section> -->
 <div class="naves">
-<section class="nav_bar">
-    <div class="container">
-        <div class="row d-flex align-items-center justify-content-center">
-            <div class="col-lg-2 d-flex align-items-center justify-content-center"><img src="assets/images/logo.png" class="img-fluid"></div>
-            <div class="col-lg-8 d-flex align-items-center justify-content-center">
-                <div class="navigator">
-                    <p>Home</p>
-                    <p>About</p>
-                    <p>Enevts</p>
-                    <p>Price</p>
-                    <p>Contact Us</p>
+    <section class="nav_bar">
+        <div class="container">
+            <div class="d-none d-lg-block">
+                <div class="row d-flex align-items-center justify-content-center">
+                    <div class="col-lg-2 d-flex align-items-center justify-content-center"><img
+                            src="assets/images/logo.png" class="img-fluid"></div>
+                    <div class="col-lg-8 d-flex align-items-center justify-content-center">
+                        <div class="navigator">
+                            <a>
+                                <p href="#home">Home</p>
+                            </a>
+                            <a href="#about">
+                                <p>About Us</p>
+                            </a>
+                            <a href="#event">
+                                <p>Events</p>
+                            </a>
+                            <a href="#price">
+                                <p>Price</p>
+                            </a>
+                            <a href="#contact">
+                                <p>contact Us</p>
+                            </a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-2">
+                        <div class="call_button">
+
+                            <p> <i class="ri-phone-fill" style="padding-right: 10px;"></i> <a
+                                    href="tel:+919363682099">+91 9363682099 </a></p>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div class="d-block d-lg-none">
+                <div class="row d-flex align-items-center justify-content-between">
+                    <div class="col-6">
+                        <div class="mobile_nav">
+                            <div class="mobile_items" id="mobile_items" style="cursor: pointer;">
+                                <i class="ri-menu-line"></i>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-6  d-flex align-items-center justify-content-end"><img src="assets/images/logo.png"
+                            class="img-fluid"></div>
 
-            <div class="col-lg-2">
+                </div>
+            </div>
+        </div>
+    </section>
+</div>
+
+<section>
+    <div class="mobile_view" id="mobile_view">
+        <div class="mobile_menus">
+            <div class="mobile_contents">
+                <div class="mobile_ties">
+                    <p>Welcome !</p>
+                    <div class="close" id="close" style="cursor: pointer;">
+                        <i class="ri-close-line"></i>
+                    </div>
+                </div>
+                <div class="mobile_view_nav">
+                    <a href="#home">
+                        <p class="topes">Home</p>
+                    </a>
+                    <a href="#about">
+                        <p>About Us</p>
+                    </a>
+                    <a href="#event">
+                        <p>Events</p>
+                    </a>
+                    <a href="#price">
+                        <p>Price</p>
+                    </a>
+                    <a href="#contact">
+                        <p>contact Us</p>
+                    </a>
+                </div>
                 <div class="call_button">
-                    
-                    <p> <i class="ri-phone-fill" style="padding-right: 10px;"></i>+92-09-36789-09</p>
+
+                    <p> <i class="ri-phone-fill" style="padding-right: 10px;"></i> <a href="tel:+919363682099">+91
+                            9363682099 </a></p>
                 </div>
             </div>
         </div>
     </div>
 </section>
-</div>
