--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -333,11 +333,11 @@
           <h2 class="plan-name">VVIP</h2>
           <div class="price">₹ 5999/-<span>/only</span></div>
           <ul class="features">
-    <li>Unlimited premium liquor</li>
-<li>Branded liquor service</li>
-<li>Premium sofa lounge</li>
-<li>All-zone event access</li>
-<li>Priority fast entry</li>
+            <li>Unlimited premium liquor</li>
+            <li>Branded liquor service</li>
+            <li>Premium sofa lounge</li>
+            <li>All-zone event access</li>
+            <li>Priority fast entry</li>
 
           </ul>
           <button class="cta-button" style="width: 100%;">Book Now</button>
@@ -353,11 +353,11 @@
           <h2 class="plan-name">VIP</h2>
           <div class="price">₹ 3999/-<span>/only</span></div>
           <ul class="features">
-<li>Unlimited liquor</li>
-<li>Banquet sofa seating</li>
-<li>Main arena access</li>
-<li>Quick entry route</li>
-<li>Assist desk support</li>
+            <li>Unlimited liquor</li>
+            <li>Banquet sofa seating</li>
+            <li>Main arena access</li>
+            <li>Quick entry route</li>
+            <li>Assist desk support</li>
 
 
           </ul>
@@ -366,7 +366,7 @@
 
       </div>
 
-      
+
       <div class="col-lg-3">
         <div class="pricing-card">
           <div class="inner-glow"></div>
@@ -375,20 +375,20 @@
           <h2 class="plan-name">Gold</h2>
           <div class="price">₹ 1299/-<span>/only</span></div>
           <ul class="features">
-           <li>Reserved seating zone</li>
-<li>Food stall access</li>
-<li>Dining-friendly area</li>
-<li>Clear stage view</li>
-<li>General area entry</li>
+            <li>Reserved seating zone</li>
+            <li>Food stall access</li>
+            <li>Dining-friendly area</li>
+            <li>Clear stage view</li>
+            <li>General area entry</li>
 
 
           </ul>
           <button class="cta-button" style="width: 100%;">Book Now</button>
-   
+
         </div>
       </div>
 
-            <div class="col-lg-3">
+      <div class="col-lg-3">
         <div class="pricing-card">
           <div class="inner-glow"></div>
           <div class="card-blur"></div>
@@ -396,11 +396,11 @@
           <h2 class="plan-name">Silver</h2>
           <div class="price">₹ 799/-<span>/only</span></div>
           <ul class="features">
-  <li>Standing zone entry</li>
-<li>Food stall access</li>
-<li>General view access</li>
-<li>Open move space</li>
-<li>Budget event entry</li>
+            <li>Standing zone entry</li>
+            <li>Food stall access</li>
+            <li>General view access</li>
+            <li>Open move space</li>
+            <li>Budget event entry</li>
 
 
 
@@ -733,20 +733,21 @@
       </div>
     </div>
   </div>
+
+</section>
+<section class="botfoot" style="background-color: #7E0086;">
   <div class="container-fluid mt-3">
     <div class="row">
       <div class="col-lg-6">
-        <p class="footer">Copyright © 2024<span> AURA Elite Events</span>. All Rights Reserved.</p>
+        <p class="footer">Copyright © 2024 AURA Elite Events. All Rights Reserved.</p>
       </div>
       <div class="col-lg-6 designes d-flex align-items-center justify-content-end">
-        <p class="">Designed & Developed by <span style="color: #7E0086;cursor: pointer;">Salkom Design Studio</span>
+        <p class="">Designed & Developed by <a style="color: white; font-weight: 400;" href="https://www.salkomdesignstudio.com/">Salkom Design Studio</a>
         </p>
       </div>
     </div>
   </div>
 </section>
-
-
 
 
 <!-- footer section end -->
